[package]
name = "helium-ledger"
version = "2.2.4-alpha.0"
authors = ["Louis Thiery <louis@helium.com>"]
edition = "2021"
publish = false

description = "A Rust Helium Ledger library"
readme = "README.md"
keywords = ["helium", "blockchain", "wallet", "ledger", "hardware wallet"]

license = "Apache-2.0"

[[bin]]
name = "helium-ledger-cli"
path = "src/main.rs"
doc = false

[dependencies]
anyhow = "1"
thiserror = "1"
byteorder = "1"
structopt = "0"
helium-api = "3.3"
helium-wallet = { git = "https://github.com/helium/helium-wallet-rs" }
helium-crypto = {git = "https://github.com/helium/helium-crypto-rs", tag="v0.3.3"}
helium-proto = { git = "https://github.com/helium/proto", branch="master"}
prettytable-rs = "0"
bs58 = {version = "0", features=["check"]}
base64 = "0"
rust_decimal = "1"
prost = "0"
qr2term = "0"
serde =  { version = "1", features = ["derive"] }
serde_json = "1"
tokio = {version = "1.2", features = ["full"]}

[dependencies.ledger-transport]
git = "https://github.com/helium/ledger-rs"
branch = "lthiery/tcp-transport"
default-features = false
features = ["transport-hid", "transport-tcp"]
